assets/css/style.scss
/* ... */
html.swal2-shown {
	overflow-y: hidden;
}

html.swal2-height-auto {
	height: auto;
}

.cclike-container {
	-webkit-user-select: none;
	user-select: none;
	padding: 0;
	background: rgba(0, 0, 0, var(--overlay-opacity));
}

.cclike-container *:not(a) {
	outline-offset: 2px;
}

.cclike-popup {
	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
	display: flex !important;
	flex-direction: column;
	max-height: min(37.5em, calc(100vh - 2.5em));
	width: 100%;
	max-width: min(95vw, 43em);
	padding: 0;
	background: var(--cc-bg) !important;
	border-radius: var(--cc-modal-border-radius);
    box-shadow: 0 .625em 1.875em rgba(0, 0, 2, .3);
}

.swal2-close.cclike-closebutton {
	position: absolute;
	width: 39.44px;
	height: 39.44px;
	right: 22.4px;
	top: 18.28px;
	font-size: 0;
	border-radius: var(--cc-btn-border-radius);
	background: var(--cc-btn-secondary-bg);
}

.swal2-close.cclike-closebutton:before {
	content: '';
	width: 19px;
	height: 19px;
	background-color: var(--cc-primary-color);
	background-repeat: no-repeat;
	mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath id='rect1' style='stroke-width:1.5;stroke:%23fffff8;' d='M 19.5 4.5 L 4.5 19.5 M 4.5 4.501 L 19.5 19.5' /%3E%3C/svg%3E%0A");
}

.cclike-title {
	padding: 24.2px 22.4px 0 22.4px;
	font-size: 1.3em;
	text-align: left;
	color: var(--cc-primary-color);
}

.swal2-html-container.cclike-htmlcontainer {
	margin: 0;
	padding: 24.2px 25.6px 18.28px 25.6px;
	margin-bottom: 10px;
	overflow-y: overlay;
	font-size: 1em;
	text-align: initial;
	background-color: inherit;
	border-radius: inherit;
}

.cclike-actions {
	width: 100%;
	height: 4.75em;
	padding: 0 25.6px 18.28px 25.6px;
	margin: 0;
	justify-content: end;
}

.swal2-confirm.cclike-confirmbutton {
	margin: 0;
	min-height: 42px;
	min-width: 110px;
	padding: 12.5px 19.7px;
	font-size: .82em;
	font-weight: 600;
	border-radius: var(--cc-btn-border-radius);
	background: var(--cc-btn-primary-bg);
	color: var(--cc-btn-primary-color);
	transition: background-color .25s ease;
}

@media screen and (max-width: 688px) {
	.swal2-close.cclike-closebutton {
		right: 19.2px;
	}

	.cclike-actions {
		padding: 18.28px 20.8px;
	}

	.swal2-confirm.cclike-confirmbutton {
		width: 100%;
		padding: 6.5px 19.7px;
	}
}

.swal2-confirm.cclike-confirmbutton,
.swal2-close.cclike-closebutton {
	@extend %cc-button;
}

[class^=swal2] button:focus {
	box-shadow: none !important;
}

[class^=swal2] button:focus-visible {
	@extend %link-focusable;
}

@mixin swal-button-hover($hover_or_active) {

	.swal2-confirm.cclike-confirmbutton:#{$hover_or_active} {
		@include cc-button_primary-hover;
	}

	.swal2-close.cclike-closebutton:#{$hover_or_active} {
		@include cc-button_secondary-hover;
	}
}

@media (hover: hover) {
	@include swal-button-hover('hover');
}

@media (hover: none) {
	@include swal-button-hover('active');
}

.cclike-container.fadein {
	animation: var(--cc-modal-transition-duration) swal-fadein ease;
}

.cclike-container.fadeout {
	animation: var(--cc-modal-transition-duration) swal-fadeout ease;
}

.cclike-popup.slidein {
	animation: var(--cc-modal-transition-duration) swal-slidein ease;
}

.cclike-popup.slideout {
	animation: var(--cc-modal-transition-duration) swal-slideout ease;
}

@keyframes swal-fadein {
	0% {
		background: transparent;
	}

	100% {
		background: rgba(0, 0, 0, var(--overlay-opacity));
	}
}

@keyframes swal-fadeout {
	0% {
		background: rgba(0, 0, 0, var(--overlay-opacity));
	}

	100% {
		background: transparent;
	}
}

@keyframes swal-slidein {
	0% {
		opacity: 0;
		transform: translateY(1.6em);
	}

	100% {
		opacity: 1;
		transform: translateY(0);
	}
}

@keyframes swal-slideout {
	0% {
		opacity: 1;
		transform: translateY(0);
	}

	100% {
		opacity: 0;
		transform: translateY(1.6em);
	}
}

/********************************************************************************
************************************ Header *************************************
/********************************************************************************/
#navbar {
	position: fixed;
	//according to circle and popups
	z-index: 800;
	height: var(--navbar-noshrink);
}

#navbar>#breadcumb {
	overflow: hidden;
}

#navbar[class*="shrinked"]>#breadcumb {
	height: var(--navbar-shrinked);
}

#navbar>#breadcumb>.link:focus-visible {
	@extend %link-focusable;
}

#navbar,
#navbar>#breadcumb {
	transition: height .15s ease, background-color .15s ease, backdrop-filter .4s ease, -webkit-backdrop-filter .4s ease;
}

#navbar>#breadcumb>#title-container {
	-webkit-user-select: none;
	user-select: none;
	position: relative;
	overflow: hidden;
}

#navbar>#breadcumb>#title-container,
#navbar>#breadcumb>.link {
	font-weight: 700;
	font-size: 24px;
	line-height: 27px;
	text-decoration: none;
}

#navbar>#breadcumb>#title-container>.real-title,
#navbar>#breadcumb>#title-container>.loading-title {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	cursor: default;
}

#navbar>#breadcumb>.link {
	flex-shrink: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 16px;
	border-radius: 50%;
	height: var(--back-width);
	width: var(--back-width);
}

#navbar>.buttons>.button>.icon {
	pointer-events: none;
	height: 17px;
	display: inline-flex;
	justify-content: center;
	color: var(--pure);
}

#navbar>#breadcumb>#title-container>.loading-title {
	position: absolute;
}

#navbar>#breadcumb>#title-container.loading>.real-title,
#navbar>#breadcumb>#title-container.loading>.loading-title {
	transform: translateY(-100%);
}

#navbar>#breadcumb>#title-container.loading>.real-title,
#navbar>#breadcumb>#title-container>.loading-title {
	opacity: 0;
}

#navbar>#breadcumb>#title-container>.real-title,
#navbar>#breadcumb>#title-container.loading>.loading-title {
	opacity: 1;
}
/* ... */

